<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/gunmetal"
        android:contentDescription="@string/image_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logocrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:textSize="48sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="128dp"
            android:layout_height="6dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@color/yellow" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/textbox"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#787878" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/textbox"
            android:ems="10"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#737373" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/yellow"
            android:onClick="login"
            android:padding="12dp"
            android:text="@string/login_button"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/yellow"
            android:onClick="signup"
            android:padding="12dp"
            android:text="@string/signup"
            app:cornerRadius="25dp"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/sf"
            android:gravity="center_horizontal"
            android:onClick="forgot_password"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/yellow" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>